# zkpasskey-crypto-modules

./: .gitmodules  Cargo.toml
docs/: groth16_usage_examples.md  memory_optimization.md  setup_guide.md  token_builder_usage.md
src/: error.rs  lib.rs
src/core/anchor/: dl.rs  error.rs  mod.rs  poseidon.rs
src/core/signature/: schnorr.rs
src/error/: error.rs
src/interface/: mod.rs
src/interface/anchor/: mod.rs
src/interface/signature/: mod.rs
src/service/: constants.rs  mod.rs
src/service/anchor/: anchor.rs  mod.rs  utils.rs
src/service/hash/: mod.rs
src/service/jwt/: builder.rs
src/service/key/: anchor.rs  io.rs  mod.rs
src/service/signature/: mod.rs  schnorr.rs
src/service/snark/: snark.rs
src/utils/: convert.rs  key.rs  mod.rs  padding.rs
tests/: groth16_integration_test.rs
