[package]
name = "zkpasskey-crypto-modules"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "modules/crates/common" }

thiserror = { version = "2.0.12" }

ark-groth16 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }
ark-relations = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-ed-on-bn254 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }